# efficient-graph-attack-agent

./: .gitignore  README.md  findings.md  main.py  pyproject.toml  requirements-gnn.txt  research-log.md  research-state.yaml
benchmarks/: comparison_table.py  dataset_registry.py  literature_baselines.json  run_baseline_comparison.py  run_benchmarks.py
clustering/: __init__.py  graphweaver.py  incident_ablation_clusterer.py  incident_clusterer.py
data/: __init__.py  graph_builder.py  incident_labels.py  schema.py
data/loaders/: __init__.py  ait_ads_loader.py  cicids_loader.py  (+6 more)
docs/: GNN_research_summary.md
evaluation/: __init__.py  evaluator.py
literature/: survey.md
models/: __init__.py  hgat.py  research_variants.py
scripts/: evaluate_excytin_bench.py  evaluate_excytin_raw_gids.py  run_cluster_ablation_experiments.py  run_h1_incident_aware_hgat.py  run_hgat_research_variants.py  run_temporal_holdout_validation.py
specs/: GIDS.md  GNN_incident_discovery_v1_a.md  SeverityNormalization.md
src/: gnn_entry.py
tests/: test_core.py  test_data_generator.py  test_error_analysis.py  test_excytin.py  test_excytin_raw_gids.py  test_excytin_script.py  test_falcon.py  test_gids.py  test_gnn_baselines.py  test_gnn_domain_baselines.py  test_gnn_pipeline.py  test_incident_ablation_clusterer.py  test_incident_clusterer.py  test_research_variants.py  test_secrl.py
to_human/: autonomous-sprint-2026-06-29.md  bootstrap-001.md  hgat-methods-001.md
training/: __init__.py  baseline_trainer.py  research_variant_trainer.py  supervised_baseline_trainer.py  trainer.py
(+27 files in other folders)
